--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "homepage": "https://mmqn.github.io/portfolio",
+  "homepage": "https://michaelmqn.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
